--- a/ProgramaAumentoSalarial/index.html
+++ b/ProgramaAumentoSalarial/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Aumento Salarial</title>
 </head>
 
@@ -24,6 +25,7 @@
     </p>
     <h3 id="outResposta"> </h3>
 
-</body>
+    <script src="script.js"></script>
 
+</body>
 </html>
