--- a/ProgramaAumentoSalarial/index.html
+++ b/ProgramaAumentoSalarial/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="infos">
             <h1>Cálcule seu aumento salarial</h1>
-            <hr size="3" color="#000">
+            <!-- <hr size="3" color="#000"> -->
             <div class="campoSalarioAtual">
                 <h3> Informe seu salário atual:</h3> <input type="text" id="inSalario">
             </div>
