--- a/ProgramaLadosTriângulo/index.html
+++ b/ProgramaLadosTriângulo/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programa Lados de um Triângulo</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+
+    <img src="https://static.preparaenem.com/conteudo_legenda/e0553c741dcccca8045a0fd58e800e39.jpg"
+        alt="Lados Triângulo">
+
+    <h1>Programa Lados de um Triângulo</h1>
+
+    <p>Lado A: <input type="text" id="inA"></p>
+    <p>Lado B: <input type="text" id="inB"></p>
+    <p>Lado C: <input type="text" id="inC"></p>
+
+    <input type="button" value="Verificar Lados" id="btCalcular">
+
+    <h3 id="outResultado"> </h3>
+    <h3 id="outTipo"> </h3>
+
     <script src="script.js"></script>
 </body>
 </html>
