--- a/ProgramaLadosTriângulo/index.html
+++ b/ProgramaLadosTriângulo/index.html
@@ -10,20 +10,26 @@
 
 <body>
 
-    <img src="https://static.preparaenem.com/conteudo_legenda/e0553c741dcccca8045a0fd58e800e39.jpg"
-        alt="Lados Triângulo">
+    <div class="container">
 
-    <h1>Programa Lados de um Triângulo</h1>
+        <img src="https://static.preparaenem.com/conteudo_legenda/e0553c741dcccca8045a0fd58e800e39.jpg"
+            alt="Lados Triângulo">
 
-    <p>Lado A: <input type="text" id="inA"></p>
-    <p>Lado B: <input type="text" id="inB"></p>
-    <p>Lado C: <input type="text" id="inC"></p>
-
-    <input type="button" value="Verificar Lados" id="btCalcular">
+        <div class="infos">
+            <h1>Programa Lados de um Triângulo</h1>
+            <hr size="3" color="#000">
+            <p>Lado A: <input type="text" id="inA"></p>
+            <p>Lado B: <input type="text" id="inB"></p>
+            <p>Lado C: <input type="text" id="inC"></p>
+            <input type="button" value="Verificar Lados" id="btCalcular">
+        </div>
+        
+    </div>
 
     <h3 id="outResultado"> </h3>
     <h3 id="outTipo"> </h3>
 
     <script src="script.js"></script>
 </body>
+
 </html>
